--- a/sequences/1_sequences.ipynb
+++ b/sequences/1_sequences.ipynb
@@ -195,6 +195,210 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "s is [1, 2, 3, 4, 5, 6], max: 6, min: 1, sum: 21\n",
+      "length 6, 2 in s: True, 10 not in s: True\n"
+     ]
+    }
+   ],
+   "source": [
+    "# examples\n",
+    "s1 = [1,2,3]\n",
+    "s2 = [4,5,6]\n",
+    "\n",
+    "s = s1 + s2\n",
+    "print(f's is {s}, max: {max(s)}, min: {min(s)}, sum: {sum(s)}')\n",
+    "print(f'length {len(s)}, 2 in s: {2 in s}, 10 not in s: {10 not in s}')\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "substring not found",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-23-736c1b57be9f>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;31m# indexing\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[0ms\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;34m'python'\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 3\u001b[1;33m \u001b[0ms\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mindex\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m't'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m3\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;31m# 2\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m: substring not found"
+     ]
+    }
+   ],
+   "source": [
+    "# indexing\n",
+    "s = 'python'\n",
+    "s.index('t', 3) # 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "s.index('o', 3, 6) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "y\n",
+      "yth\n",
+      "yhn\n"
+     ]
+    }
+   ],
+   "source": [
+    "# slicing\n",
+    "s = 'python'\n",
+    "print(s[1]) # y\n",
+    "print(s[1:4]) # yth\n",
+    "print(s[1:6:2]) # yhn"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1708038724400\n",
+      "<class 'str'> 1708084522416\n",
+      "<class 'str'> 1708084456496\n"
+     ]
+    }
+   ],
+   "source": [
+    "# each slice creates a new object\n",
+    "# each slice returns same container type\n",
+    "s = 'python'\n",
+    "print(id(s))\n",
+    "print(type(s[1:4]), id(s[1:4]))\n",
+    "print(type(s[1:6:2]), id(s[1:6:2]))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "range(0, 10)\n",
+      "<class 'range'>\n",
+      "[0, 1, 2, 3, 4, 5, 6, 7, 8, 9]\n",
+      "[5, 6, 7, 8, 9]\n",
+      "range(1, 4)\n",
+      "0\n",
+      "9\n",
+      "2\n"
+     ]
+    }
+   ],
+   "source": [
+    "# range function is restricted to integers\n",
+    "# range(start, stop, step)\n",
+    "r = range(10)\n",
+    "print(r)\n",
+    "print(type(r))\n",
+    "print(list(r))\n",
+    "print(list(range(5,10)))\n",
+    "# range does not support slicing\n",
+    "print(r[1:4]) # TypeError: 'range' object is not subscriptable\n",
+    "# range supports indexing\n",
+    "print(r[0]) # 0\n",
+    "print(r[-1]) # 9\n",
+    "print(r[2]) # 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-1390277719187820"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# hashing\n",
+    "# hashable objects are immutable\n",
+    "# hashable objects are comparable\n",
+    "# hashable objects can be used as dictionary keys\n",
+    "# hashable objects can be used as set elements\n",
+    "# hashable objects support iteration\n",
+    "# hashable objects support indexing\n",
+    "# hashable objects support slicing\n",
+    "s = 'python'\n",
+    "hash(s) # -909279199"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "y is [[1, 2, 3], [1, 2, 3]], z is [[1, 2, 3], [1, 2, 3]]\n",
+      "y is [[[10, 20, 30], 2, 3], [[10, 20, 30], 2, 3]], z is [[[10, 20, 30], 2, 3], [[10, 20, 30], 2, 3]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# dangers of concatenation and repetion\n",
+    "l = [[1,2,3]]\n",
+    "y = l+l \n",
+    "z = l*2\n",
+    "print(f'y is {y}, z is {z}')\n",
+    "l[0][0] = [10,20,30]\n",
+    "print(f'y is {y}, z is {z}')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
