--- a/sequences/1_sequences.ipynb
+++ b/sequences/1_sequences.ipynb
@@ -8,7 +8,7 @@
     "\n",
     "<p style=\"color:green; font-size:25px;\">A sequence is an ordered collection of elements with the following characteristics:</p>\n",
     "\n",
-    "<ul style=\"color:yellow; font-size:20px;\">\n",
+    "<ul style=\"font-size:20px;\">\n",
     "  <li>Countable: A sequence is an ordered collection of elements.</li>\n",
     "  <li>Positional Ordering: Each element in a sequence is assigned a unique index, starting from 0.</li>\n",
     "  <li>Sequences can be of different types.</li>\n",
